--- a/static/style.css
+++ b/static/style.css
@@ -199,7 +199,7 @@ footer a{
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #3498db;
   color: white;
   padding: 10px 20px;
   border: none;
